# ros-costmap-plugin

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
cfg/: InteractiveObstacleLayer.cfg
include/ros-costmap-plugin/: all_robot_front_obstacle_layer.hpp  interactive_obstacle_layer.hpp  single_robot_front_obstacle_layer.hpp
src/: all_robot_front_obstacle_layer.cpp  interactive_obstacle_layer.cpp  single_robot_front_obstacle_layer.cpp
